--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
       }
 
       //Set Facing Mode here ('environment', 'user', '')
-      window.unityFacingMode = "environment";
+		window.unityFacingMode = "environment"
 
       window.WEBCAM_SETTINGS = {
         video: {
