--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        z-index: 0;
+        z-index: 1;
       "
     >
       <source src="OBP_video.mp4" type="video/mp4" />
@@ -63,11 +63,13 @@
     <!--UI: Startup Message -->
     <div id="startARDiv" class="ctaDiv">
       <h1 data-lang="en">Ready to Begin?</h1>
+      <h1 data-lang="cz" style="display: none">Začněme!</h1>
+
+      <!-- Text -->
       <p class="popup-text" data-lang="en">
         This augmented reality experience requires access to your device's
         camera and motion sensors.
       </p>
-      <h1 data-lang="cz" style="display: none">Začněme!</h1>
       <p class="popup-text" data-lang="cz" style="display: none">
         Tato rozšířená realita vyžaduje přístup k fotoaparátu a pohybovým
         senzorům vašeho zařízení.
@@ -79,7 +81,8 @@
         style="display: none"
         onclick="StartAR()"
       >
-        ALLOW
+        <span data-lang="en">ALLOW</span>
+        <span data-lang="cz" style="display: none">POVOLIT</span>
       </button>
     </div>
     <!--UI: Screenshot Popup -->
@@ -149,16 +152,17 @@
 
     <script>
       //Detect browser language (eng/cz)
-      function setLanguage(lang) {
-        document.querySelectorAll(".popup-text").forEach((el) => {
-          el.style.display = el.dataset.lang === lang ? "block" : "none";
+      function switchLanguage(lang) {
+        document.querySelectorAll("[data-lang]").forEach((el) => {
+          el.style.display =
+            el.getAttribute("data-lang") === lang ? "" : "none";
         });
       }
 
       const userLang = navigator.language || navigator.userLanguage;
       const langCode = userLang.toLowerCase().startsWith("cs") ? "cz" : "en";
 
-      setLanguage(langCode);
+      switchLanguage(langCode);
 
       //Dynamic background
       const gradientElement = document.getElementById("gradient-background");
