--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-        z-index: 0;
+        z-index: 1;
       "
     >
       <source src="OBP_video.mp4" type="video/mp4" />
@@ -62,18 +62,27 @@
     ></canvas>
     <!--UI: Startup Message -->
     <div id="startARDiv" class="ctaDiv">
-      <h1>ALERT</h1>
-      <p class="popup-text">
+      <h1 data-lang="en">Ready to Begin?</h1>
+      <h1 data-lang="cz" style="display: none">Začněme!</h1>
+
+      <!-- Text -->
+      <p class="popup-text" data-lang="en">
         This augmented reality experience requires access to your device's
         camera and motion sensors.
       </p>
+      <p class="popup-text" data-lang="cz" style="display: none">
+        Tato rozšířená realita vyžaduje přístup k fotoaparátu a pohybovým
+        senzorům vašeho zařízení.
+      </p>
+
       <button
         class="allow-button"
         id="startARButton"
         style="display: none"
         onclick="StartAR()"
       >
-        ALLOW
+        <span data-lang="en">ALLOW</span>
+        <span data-lang="cz" style="display: none">POVOLIT</span>
       </button>
     </div>
     <!--UI: Screenshot Popup -->
@@ -142,6 +151,19 @@
     <script src="Build/Builds.loader.js"></script>
 
     <script>
+      //Detect browser language (eng/cz)
+      function switchLanguage(lang) {
+        document.querySelectorAll("[data-lang]").forEach((el) => {
+          el.style.display =
+            el.getAttribute("data-lang") === lang ? "" : "none";
+        });
+      }
+
+      const userLang = navigator.language || navigator.userLanguage;
+      const langCode = userLang.toLowerCase().startsWith("cs") ? "cz" : "en";
+
+      switchLanguage(langCode);
+
       //Dynamic background
       const gradientElement = document.getElementById("gradient-background");
 
@@ -234,7 +256,6 @@
             progressBarFull.style.width = 100 * progress + "%";
           }
         ).then((unityInstance) => {
-          unityInstance.SetFullscreen(1);
           window.unityInstance = unityInstance;
           document.getElementById("threejs-bg").style.display = "none";
           RequestWebcam();
@@ -248,7 +269,7 @@
       }
 
       //Set Facing Mode here ('environment', 'user', '')
-		window.unityFacingMode = "environment"
+      window.unityFacingMode = "environment";
 
       window.WEBCAM_SETTINGS = {
         video: {
@@ -272,6 +293,7 @@
           requestingForCameraPermission = false;
 
           document.getElementById("bg-video").style.display = "none";
+          console.log("video turned off");
         } catch (err) {
           console.error("getUserMedia error - ", err);
           ShowError(
